# ExoPlayer

./: build.gradle  settings.gradle
GLRenderCapture/: build.gradle
GLRenderCapture/src/androidTest/java/com/kutear/gl/render/capture/: ExampleInstrumentedTest.kt
GLRenderCapture/src/main/: AndroidManifest.xml
GLRenderCapture/src/main/cpp/: CMakeLists.txt  jni.cc  log.h  xhook_for_gl.h
GLRenderCapture/src/main/cpp/xhook/: CMakeLists.txt  xh_jni.c
GLRenderCapture/src/main/java/com/kutear/gl/render/capture/: GLCapture.kt  GLCaptureImpl.kt  GLCaptureListener.kt  JNI.kt
GLRenderCapture/src/main/java/com/kutear/gl/render/capture/core/: GLRecorder.kt
GLRenderCapture/src/main/java/com/kutear/gl/render/capture/grafika/: VideoEncoderCore.java
GLRenderCapture/src/main/java/com/kutear/gl/render/capture/grafika/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
GLRenderCapture/src/test/java/com/kutear/gl/render/capture/: ExampleUnitTest.kt
demos/gl/: build.gradle
demos/gl/src/main/: AndroidManifest.xml
demos/gl/src/main/cpp/: CMakeLists.txt  jni.c
demos/gl/src/main/java/com/google/android/exoplayer2/gldemo/: BitmapOverlayVideoProcessor.java  FBORender.kt  JNI.kt  MainActivity.java  OverlayVideoProcessor.kt
demos/gl/src/main/res/layout/: main_activity.xml
